--- a/index.html
+++ b/index.html
@@ -17,45 +17,38 @@
 			<div class="container">
 			<form>
 				<label for="name"> name:</label>
-				<input type="text" class="form-control" id="name" name="name" placeholder="Enter name here"></input>
+				<input type="text" class="form-control" id="name" placeholder="Enter name here"></input>
 				<br/>
+
 				<label for="age"> age:</label>
-				<input type="text" class="form-control" id="age" name="age" placeholder="Enter age here"></input>
+				<input type="number" class="form-control" id="age" placeholder="Enter age here"></input>
 				<br/>
-				<button type="button" class="btn" id="button" onClick="verify()" id="verify">verify</button>
+
+				<button type="button" class="btn" onclick="verify()">verify</button>
 			</form>
 		</div>
 	</div>
+</body>		
 
-		<script>
-		function verify (){
-			var age =
-			document.getElementbyId("age").value;
-				if (age >= 18){
-					window.alert("you are eligible to vote");
-				} else if (age < 18) {
-					window.alert("you are not eligible to vote");
-				}
-			}
+	<script>
 
-		</script>
+		function verify(){
+			var age = document.getElementById("age").value;
 
-		<script>
-			var score =
-			document.getElementbyId("").value;
-				if (score >= 1) && (score <= 5){
-					window.alert("needs improvement")
-				} else if (score >= 6) && (score <= 8){
-					window.alert("standard")
-				} else if (score >=9) && (score <= 12){
-					window.alert("above standard")
-				} else if (score >=13) && (score <= 15){
-					window.alert("excellent")
-				}
-		</script>
+		if (age >= 18) {
+			window.alert("you are eligible to vote");
+		} 
+
+		else {
+			window.alert("you are not eligible to vote");
+		}
+	}
+
+	</script>
+
 
 	<div class="footer" id="footer"> 
 		<hr><p> &#169; 2025 | ICT | Exercise 2: Conditional Statements | Yao, Francesca </p>
 	</div>
-</body>
+
 </html>
